[gd_scene load_steps=7 format=3 uid="uid://diroy0swhcbhi"]

[ext_resource type="Script" path="res://Menu/ConfigMenu/ConfigMenu.gd" id="1_uwx6s"]
[ext_resource type="Texture2D" uid="uid://xqdjlsxyguvt" path="res://Menu/Sprite/vybwLa.jpg" id="2_fjqr2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g7v4l"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n21o"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvac2"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l3fhd"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="ConfigMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uwx6s")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fjqr2")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -16.0
offset_right = 4.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullScreenButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_g7v4l")
text = "Pantalla completa"

[node name="MuteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_2n21o")
text = "Silenciar juego"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lvac2")
text = "Guardar"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_l3fhd")
text = "Volver"

[connection signal="pressed" from="VBoxContainer/FullScreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MuteButton" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
